prelim HTML, CSS

--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
     <title>Image Carousel</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <div class="carousel">
+      <div class="image-container imgs">
+        <img src='https://source.unsplash.com/CM1oVEUzsNM/1920x2880' alt="dog in snow" />
+        <img src='https://source.unsplash.com/XOA3-WglG8A/1920x2560' alt="trees coverd in snow" />
+        <img src='https://source.unsplash.com/453iWFvL8BQ/1920x2400' alt="school of jellyfish" />
+        <img src='https://source.unsplash.com/DJ4vjcD0s0I/1920x2400' alt="yawning tiger - Rajasthan, India" />
+      </div>
+      <div class="buttons-container">
+        <button id="left" class="btn">Prev</button>
+        <button id="right" class="btn">Next</button>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
